Authorizer refactor